SUBDIRS = src
DIST_SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = apertium-tagger-training-tools-$(GENERIC_RELEASE).pc

EXTRA_DIST=autogen.sh example/likelihood-script-catalan-batch-mode.sh example/README \
example/translation-script-es-ca.sh example/likelihood-script-catalan.sh \
example/translation-script-es-ca-batch-mode.sh ACKNOWLEDGEMENTS
